Kod Parçacığı Kenar Çubuğu eklendi
Bu özellik, sayfalarda üçlü backtick (```) ile çevrelenmiş kod bloklarını
otomatik olarak algılar ve bunları erişilebilir bir kenar çubuğunda listeler.

Kenar çubuğu şunları içerir:
- Tüm algılanan kod parçacıklarının bir listesi ve kısa önizlemesi.
- Her parçacık için doğrudan kopyalama düğmesi.
- Tam kod içeriğini görüntülemek ve kopyalamak için ayrıntılı bir görünüm.
- Kullanıcıların kenar çubuğunu açıp kapatması için sürüklenebilir bir açma/kapama düğmesi. Düğmenin konumu oturumlar arasında kaydedilir.

Mevcut `<pre>` blok akordiyonu işlevselliği korunmuştur.
Bu güncelleme, kullanıcıların sayfadaki kod parçacıklarını daha kolay bulmasına,
incelemesine ve kopyalamasına olanak tanır.

--- a/manifest.json
+++ b/manifest.json
@@ -1,17 +1,17 @@
 {
-    "manifest_version": 3,
-    "name": "Kod Bloğu Akordiyonu (Dinamik)",
-    "version": "1.2",
-    "description": "Sayfalardaki dinamik olarak eklenen ve _ngcontent-ng-c attribute'lu <pre> bloklarını akordiyon yapar.",
-    "host_permissions": [
-      "<all_urls>"
-    ],
-    "content_scripts": [
-      {
-        "matches": ["<all_urls>"],
-        "js": ["content.js"],
-        "css": ["styles.css"],
-        "run_at": "document_idle"
-      }
-    ]
-  }
+  "manifest_version": 3,
+  "name": "Kod Bloğu Akordiyonu & Kod Parçacığı Kenar Çubuğu",
+  "version": "1.3",
+  "description": "Sayfalardaki _ngcontent-ng-c öznitelikli <pre> bloklarını akordiyon yapar ve ``` ile çevrili kod parçacıklarını bir kenar çubuğunda listeler/görüntüler.",
+  "host_permissions": [
+    "<all_urls>"
+  ],
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["content.js"],
+      "css": ["styles.css"],
+      "run_at": "document_idle"
+    }
+  ]
+}
