--- a/manifest.json
+++ b/manifest.json
@@ -4,11 +4,11 @@
   "version": "1.3",
   "description": "Sayfalardaki _ngcontent-ng-c öznitelikli <pre> bloklarını akordiyon yapar ve ``` ile çevrili kod parçacıklarını bir kenar çubuğunda listeler/görüntüler.",
   "host_permissions": [
-    "<all_urls>"
+    "https://aistudio.google.com/*"
   ],
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
+      "matches": ["https://aistudio.google.com/*"],
       "js": ["content.js"],
       "css": ["styles.css"],
       "run_at": "document_idle"
