--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "Kod Bloğu Akordiyonu & Kod Parçacığı Kenar Çubuğu",
-  "version": "1.3",
-  "description": "Sayfalardaki _ngcontent-ng-c öznitelikli <pre> bloklarını akordiyon yapar ve ``` ile çevrili kod parçacıklarını bir kenar çubuğunda listeler/görüntüler.",
+  "version": "1.4",
+  "description": "Sayfalardaki _ngcontent-ng-c öznitelikli <pre> bloklarını akordiyon yapar, ``` ile çevrili kod parçacıklarını kenar çubuğunda listeler ve araç çubuğuna tam kod kopyala düğmesi ekler.",
   "host_permissions": [
     "https://aistudio.google.com/*"
   ],
