Chrome eklentisine kullanıcı mesajı kısaltma özelliği eklendi
Performance iyileştirmesi için kullanıcı mesajlarını otomatik olarak ilk 10 kelimeye kısaltır:

Message Truncation Module (src/messages.js):
- MutationObserver ile AI Studio'nun dinamik DOM güncellemelerini izler
- Kullanıcı mesajlarını otomatik tespit eder ve 10 kelimeye kısaltır
- SessionStorage ile orijinal/kısaltılmış metin durumlarını saklar
- Tıklayarak genişlet/daralt özelliği ile tam kontrolü sağlar
- Debouncing ile performansı optimize eder

UI & UX Improvements:
- Türkçe hover ipuçları ("tıkla genişlet" / "tıkla daralt")
- Smooth transitions ve visual feedback
- AI Studio tasarım diline uygun CSS variables
- Click-to-toggle functionality for user control

Integration:
- Manifest.json'a messages.js modülü eklendi
- Main.js'te initialization entegrasyonu
- Mevcut modüler IIFE pattern'ine uygun yapı
- Existing Plan Stages sidebar ile seamless çalışma

Browser performance boost through automatic message truncation while maintaining full user control.

--- a/chrome_extension/manifest.json
+++ b/chrome_extension/manifest.json
@@ -28,6 +28,7 @@
         "src/state.js",
         "src/handlers.js",
         "src/ui.js",
+        "src/messages.js",
         "src/main.js"
       ],
       "css": [
