Chrome eklentisi accordion hatalarını düzelt ve çalışan eski sürüm mantığını kullan
Accordion Yeniden Yazımı (src/accordion.js):
- Çalışan eski sürümün basit ve güvenilir toggle mantığı kullanıldı
- classList.toggle() ile direkt DOM state yönetimi
- Pre elementlerini hedef alma (ms-code-block yerine)
- Basit unique ID counter sistemi (content hash yerine)
- Karmaşık sessionStorage yerine DOM class'ları tek kaynak

Button Logic Düzeltmeleri:
- Varsayılan durum: Collapsed (kod-blok-icerik-kapali)
- Üst buton: ▼ (genişlet) ↔ ▲ (daralt) toggle
- Alt buton: Her zaman ▲ (kapat), collapsed'da gizli
- Tek tık güvenilirliği ve smooth scrolling

Messages.js Hata Düzeltmesi:
- target.closest() TypeError düzeltildi
- Text node vs Element node proper handling
- MutationObserver'da defensive programming

CSS & Icons İyileştirmeleri:
- Button z-index 1000'e yükseltildi
- pointer-events: auto ve min-width/height eklendi
- Global ICONS object (window.ICONS)
- Expand/collapse SVG ikonları eklendi

Artık kod blokları çalışan eski sürümdeki gibi güvenilir şekilde açılıp kapanıyor.

--- a/chrome_extension/manifest.json
+++ b/chrome_extension/manifest.json
@@ -29,6 +29,7 @@
         "src/handlers.js",
         "src/ui.js",
         "src/messages.js",
+        "src/accordion.js",
         "src/main.js"
       ],
       "css": [
