Deep URI sistemi tamamlandı - hybrid yaklaşım ile kısa/uzun content desteği
Chrome Extension:
- sendToVscode fonksiyonuna content uzunluğu kontrolü eklendi
- Kısa content (<1000 karakter) URI parametresi ile gönderiliyor
- Uzun content clipboard ile gönderiliyor
- URL uzunluğu sınırı aşma sorunu çözüldü

Cursor Extension:
- URI'den content parametresi okuma desteği eklendi
- Önce URI'den, yoksa clipboard'dan content okuma
- Markdown kod bloğu temizleme optimizasyonu
- Debug logları temizlendi

Test Edilen Durumlar:
- Kısa kod blokları: URI mode
- Uzun kod blokları: clipboard mode
- Her iki durumda da başarılı dosya oluşturma

--- a/cursor_extension/package.json
+++ b/cursor_extension/package.json
@@ -24,6 +24,7 @@
     "url": "https://github.com/aistudio/copy-helper"
   },
   "activationEvents": [
+    "onUri",
     "*"
   ],
   "main": "./dist/extension.js",
@@ -47,10 +48,10 @@
     }
   },
   "scripts": {
-    "vscode:prepublish": "npm run package",
+    "vscode:prepublish": "npm run compile",
     "compile": "npm run esbuild-base -- --minify",
     "watch": "npm run esbuild-base -- --watch",
-    "package": "npm run esbuild-base -- --minify",
+    "package": "npx vsce package",
     "esbuild-base": "esbuild ./extension.ts --bundle --outfile=dist/extension.js --external:vscode --format=cjs --platform=node",
     "lint": "eslint . --ext .ts"
   },
